--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>consumer</module>
         <module>providers</module>
         <module>api</module>
+        <module>gateway</module>
     </modules>
     <name>nacos-discovery-test</name>
 
@@ -52,10 +53,6 @@
     </dependencyManagement>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
@@ -105,7 +102,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
     </dependencies>
 
     <build>
