--- a/providers/pom.xml
+++ b/providers/pom.xml
@@ -12,4 +12,11 @@
     <artifactId>providers</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
