--- a/providers/src/main/resources/application.properties
+++ b/providers/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 server.port=8086
 spring.application.name=nacos-provider
-spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+spring.cloud.nacos.discovery.server-addr=localhost:8848
 management.endpoints.web.exposure.include=*
 spring.cloud.sentinel.transport.port=8719
 spring.cloud.sentinel.transport.dashboard=localhost:7777
+
+# zipkin
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.http.enabled=true
+#设置Sleuth的抽样收集概率
+spring.sleuth.sampler.probability=0.1
